@@ -17,6 +17,7 @@
 package com.cloud.hypervisor.kvm.resource;
 
 import java.io.File;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
@@ -2174,9 +2175,9 @@ public class LibvirtVMDef {
             T field = (T) customNodes.get(fieldClass.getName());
             if (field == null) {
                 try {
-                    field = fieldClass.newInstance();
+                    field = fieldClass.getDeclaredConstructor().newInstance();
                     customNodes.put(field.getClass().getName(), field);
-                } catch (InstantiationException | IllegalAccessException e) {
+                } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
                     LOGGER.debug("No default constructor available in class " + fieldClass.getName() + ", ignoring exception", e);
                 }
             }
